syntax = "proto3";

package NDTS.NTabasco;

message TBatch {
    repeated uint32 testIndex = 1; 
}

message TBatches {
    repeated TBatch batch = 1;
}